--- a/index.css
+++ b/index.css
@@ -1,10 +1,30 @@
+@media (max-width: 600px) {
+    body {
+        justify-content: flex-start; 
+        padding: 10px;
+    }
+
+    .clock-time {
+        font-size: 20px!important; 
+    }
+
+    .weather, .city-text {
+        font-size: 100%; 
+    }
+
+    .github {
+        scale: 70%; 
+    }
+}
+
 body {
     background-color: rgb(19, 19, 19);
     display: flex;
     align-items: center;
     justify-content: center;
-    width: auto;
+    width: 100%;
     height: auto;
+    margin: auto;
     overflow-x: hidden;
     overflow-y: hidden;
     flex-direction: column;
@@ -22,16 +42,17 @@ body {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .city-text {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 10px;
 }
+
 .social-bar {
-    display: flex;
-    flex-direction: row;
+    height: 45px;
 }
 .github {
-    scale: 10%;
+    margin-top: 150%;
     cursor: pointer;
 }
