--- a/index.css
+++ b/index.css
@@ -15,6 +15,13 @@
     .github {
         scale: 70%; 
     }
+    
+    .toggle-units-btn {
+        width: 70%!important;
+    }
+    .change-city-btn {
+        width: 70%!important;
+    }
 }
 
 body {
@@ -54,5 +61,106 @@ body {
 }
 .github {
     margin-top: 150%;
+    cursor: pointer;
+}
+
+.setting-button {
+    margin-right: 8%;
+    margin-top: 2%;
+    align-self: flex-end;
+    cursor: pointer;
+}
+.setting-button:hover {
+    color: rgb(255, 255, 255);
+    animation: 1s ease-in;
+}
+
+.modal {
+    display: none; 
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.71); /* Black w/ opacity */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+.modal-content {
+    display: flex;
+    text-align: center;
+    margin: 10% auto;
+    animation: ease-in 350ms;
+    background-color: rgb(0 0 0 / 66%);
+    width: 50%;
+    height: 50%;
+    padding: 20px;
+    border: 1px solid #494949;
+    color: #fff;
+    animation-name: animatetop;
+    animation-duration: 250ms;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+.inner-modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.close {
+    color: #6b6b6b;
+    position: fixed;
+    float: right;
+    margin-left: 50%;
+    margin-top: -1%;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.change-city-btn {
+    background-color: transparent;
+    text-align: center;
+    color: white;
+    border-radius: 15px;
+    height: 8.6%;
+    width: 15%;
+    margin-top: 10px;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+}
+
+.input-box-city {
+    margin-top: 15px;
+    background-color: transparent;
+    height: 8%;
+    border-radius: 10px;
+    text-align: center;
+    border: 0.5px solid white;
+    color: white;
+}
+
+.toggle-units-btn {
+    background-color: transparent;
+    text-align: center;
+    color: white;
+    border-radius: 15px;
+    height: 10%;
+    width: 15%;
+    margin-top: 10px;
+    border: 1px solid #ffffff;
     cursor: pointer;
 }
