--- a/index.css
+++ b/index.css
@@ -1,30 +1,30 @@
-@media (max-width: 600px) {
+@media (max-width: 640px) and (max-height: 960px) {
     body {
         justify-content: flex-start;
-        padding: 10px;
+        padding: 5px;
     }
 
     .clock-time {
-        font-size: 20px!important;
+        font-size: 18px!important;
     }
 
     .weather, .city-text {
-        font-size: 100%;
+        font-size: 90%;
     }
 
     .github {
-        transform: scale(0.7); /* Changed from 'scale' to 'transform' */
-        margin-top: 150%; /* Removed 'scale' and adjusted 'margin-top' */
+        transform: scale(0.6);
+        margin-top: 120%;
     }
 
     .toggle-units-btn, .change-city-btn, .time-format-selection {
-        width: 70%!important;
-        height: 12%; /* Set height for consistency */
-        font-size: 16px; /* Adjusted font size */
+        width: 60%!important;
+        height: 10%;
+        font-size: 14px;
     }
 
     .setting-button {
-        margin-right: 8%;
+        margin-right: 5%;
         margin-top: 2%;
         align-self: flex-end;
         cursor: pointer;
@@ -32,37 +32,32 @@
 
     .setting-button:hover {
         color: rgb(255, 255, 255);
-        animation: fadeIn 1s; /* Added fadeIn animation */
+        animation: fadeIn 1s;
     }
 
     .modal-content {
-        width: 90%; /* Adjusted width for better mobile display */
-        height: auto; /* Changed height to 'auto' for better scaling */
+        width: 90%;
+        height: auto;
     }
 
     .close {
-        font-size: 24px; /* Adjusted font size */
-        margin-left: 90%; /* Adjusted position */
-        margin-top: -4%; /* Adjusted position */
-    }
-
-    .change-city-btn, .toggle-units-btn, .time-format-selection {
-        width: 70%!important;
-        height: 12%;
-        font-size: 16px; /* Adjusted font size */
+        font-size: 22px;
+        margin-left: 90%;
+        margin-top: -4%;
     }
 
     .input-box-city {
-        margin-top: 15px;
+        margin-top: 10px;
         background-color: transparent;
-        height: 8%;
-        border-radius: 10px;
+        height: 6%;
+        border-radius: 8px;
         text-align: center;
         border: 0.5px solid white;
         color: white;
-        width: 70%; /* Adjusted width for better mobile display */
+        width: 60%;
     }
 }
+
 body {
     background-color: rgb(19, 19, 19);
     display: flex;
@@ -71,8 +66,7 @@ body {
     width: 100%;
     height: auto;
     margin: auto;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: auto;
     flex-direction: column;
 }
 
@@ -139,11 +133,11 @@ body {
 .modal-content {
     display: flex;
     text-align: center;
-    margin: 10% auto;
+    margin: 5% auto;
     animation: ease-in 350ms;
     background-color: rgb(0 0 0 / 66%);
     width: 50%;
-    height: 60%;
+    height: 80%;
     padding: 20px;
     border: 1px solid #494949;
     color: #fff;
