--- a/index.css
+++ b/index.css
@@ -56,6 +56,116 @@
         color: white;
         width: 60%;
     }
+
+    .dev-notes {
+        font-size: 14px;
+        min-width: 60%;
+        max-height: 9.5%;
+    }
+}
+
+
+.preloading-screen {
+    position: fixed;
+    display: flex;
+    background-color: black;
+    z-index: 99;
+    width: 100%;
+    height: 65rem;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    overflow: hidden;
+    transition: opacity 500ms ease-out;
+}
+
+.clock {
+    border-radius: 100%;
+    background: #ffffff;
+    height: 255px;
+    font-family: "Montserrat";
+    border: 5px solid white;
+    box-shadow: inset 2px 3px 8px 0 rgba(0, 0, 0, 0.1);
+  }
+  
+  .wrap {
+    overflow: hidden;
+    position: relative;
+    width: 250px;
+    height: 250px;
+    border-radius: 100%;
+  }
+  
+  .minute,
+  .hour {
+    position: absolute;
+    height: 70px;
+    width: 6px;
+    margin: auto;
+    top: -28%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: black;
+    transform-origin: bottom center;
+    transform: rotate(0deg);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+    z-index: 1;
+  }
+  
+  .minute {
+    position: absolute;
+    height: 100px;
+    width: 4px;
+    top: -38%;
+    left: 0;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+    transform: rotate(90deg);
+  }
+  
+  .second {
+    position: absolute;
+    height: 100px;
+    width: 2px;
+    margin: auto;
+    top: -40%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 4px;
+    background: #FF4B3E;
+    transform-origin: bottom center;
+    transform: rotate(180deg);
+    z-index: 1;
+  }
+  
+  .dot {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 12px;
+    height: 12px;
+    border-radius: 100px;
+    background: white;
+    border: 2px solid #1b1b1b;
+    border-radius: 100px;
+    margin: auto;
+    z-index: 1;
+  }
+
+.inner-preloading-screen {
+    display: flex;
+    background-color: transparent;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    width: 50%;
+    height: 50%;
+    flex-direction: column;
 }
 
 body {
@@ -211,6 +321,26 @@ body {
     cursor: pointer;
 }
 
+.dev-notes {
+    background-color: transparent;
+    text-align: center;
+    color: white;
+    border-radius: 15px;
+    height: 10.7%;
+    width: 20%;
+    margin-top: 10px;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+    text-decoration: none;
+}
+
 .time-format-label {
     margin-top: 5%;
+}
+
+.loading-text {
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    padding-top: 90px;
 }
