--- a/index.css
+++ b/index.css
@@ -162,6 +162,7 @@
     background-color: transparent;
     align-items: center;
     justify-content: center;
+    margin-top: 20%;
     z-index: 1000;
     width: 50%;
     height: 50%;
