--- a/index.css
+++ b/index.css
@@ -59,11 +59,14 @@
 
     .dev-notes {
         font-size: 14px;
-        min-width: 60%;
-        max-height: 9.5%;
+        width: 60%;
+        height: 9.5%;
     }
 }
 
+:root {
+    color-scheme: dark;
+}
 
 .preloading-screen {
     position: fixed;
@@ -71,7 +74,7 @@
     background-color: black;
     z-index: 99;
     width: 100%;
-    height: 65rem;
+    min-height: 200%;
     justify-content: center;
     align-items: center;
     align-self: center;
@@ -321,18 +324,26 @@ body {
     border: 1px solid #ffffff;
     cursor: pointer;
 }
+.time-format-selection:focus,
+.time-format-selection:hover {
+    background-color: transparent;
+}
 
 .dev-notes {
+    display: flex;
+    justify-content: center;
     background-color: transparent;
     text-align: center;
     color: white;
     border-radius: 15px;
-    height: 10.7%;
-    width: 20%;
+    font-size: 14px;
+    width: 150px;
+    height: 60px;
     margin-top: 10px;
     border: 1px solid #ffffff;
     cursor: pointer;
     text-decoration: none;
+    align-items: center;
 }
 
 .time-format-label {
@@ -345,3 +356,100 @@ body {
     font-size: 30px;
     padding-top: 90px;
 }
+.timer-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 20px;
+    cursor: pointer;
+    padding: 15px 15px 15px 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 550;
+}
+
+button[data-setter] {
+    outline: none;
+    background: transparent;
+    border: none;
+    font-family: 'Roboto';
+    font-weight: 300;
+    font-size: 18px;
+    width: 25px;
+    height: 30px;
+    color: #ffffff;
+    cursor: pointer;
+  }
+  button[data-setter]:hover { opacity: 0.5; }
+  .setters {
+    left: 85px;
+    top: 75px;
+  }
+  .minutes-set {
+    float: left;
+    margin-right: 28px;
+  }
+  .seconds-set { float: right; }
+  .controlls {
+    text-align: center;
+  }
+  .display-remain-time {
+    font-size: 65px;
+    color: #a3a3a3b3;
+    transform: translateY(-200px);
+    max-height: 150px;
+    position: relative;
+    height: 30px
+px;
+  }
+  #pause {
+    outline: none;
+    background: transparent;
+    border: none;
+    margin-top: 10px;
+    width: 50px;
+    height: 50px;
+    position: relative;
+  }
+  .play::before {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 22px solid #a3a3a3b3;
+  }
+  .pause::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 12px;
+    width: 15px;
+    height: 30px;
+    background-color: transparent;
+    border-radius: 1px;
+    border: 5px solid #a3a3a3b3;
+    border-top: none;
+    border-bottom: none;
+  }
+  #pause:hover { opacity: 0.8; }
+  .e-c-base {
+    fill: none;
+    stroke: #B6B6B6;
+    stroke-width: 4px
+  }
+  .e-c-progress {
+    fill: none;
+    stroke: #000000b3;
+    stroke-width: 4px;
+    transition: stroke-dashoffset 0.7s;
+  }
+  .e-c-pointer {
+    fill: #FFF;
+    stroke: #a3a3a3b3;
+    stroke-width: 2px;
+  }
+  #e-pointer {transition: transform 0.7s;}
